--- a/app/src/main/res/layout/activity_list_cat.xml
+++ b/app/src/main/res/layout/activity_list_cat.xml
@@ -1,19 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".listcats.ui.ListCatsActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".listcats.ui.ListCatsActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+  <com.yuyakaido.android.cardstackview.CardStackView
+      android:id="@+id/card_stack_view"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:padding="4dp"
+      android:clipToPadding="false"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginStart="8dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/guideline"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp">
+  </com.yuyakaido.android.cardstackview.CardStackView>
 
+
+  <androidx.constraintlayout.widget.Guideline
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/guideline"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_percent="0.85"/>
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:clickable="true"
+      app:srcCompat="@drawable/rewind_blue_24dp"
+      android:id="@+id/bt_rewind"
+      app:backgroundTint="@android:color/white"
+      app:fabSize="mini"
+      app:rippleColor="#225BC9FA"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="8dp"
+      app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toTopOf="@+id/guideline"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toBottomOf="parent" android:focusable="true"/>
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:clickable="true"
+      app:srcCompat="@drawable/like_green_24dp"
+      android:id="@+id/bt_like"
+      app:backgroundTint="@android:color/white"
+      app:fabSize="auto"
+      app:rippleColor="#226FE2B3"
+      app:layout_constraintStart_toEndOf="@+id/bt_rewind" android:layout_marginStart="32dp"
+      app:layout_constraintTop_toTopOf="@+id/bt_rewind"
+      app:layout_constraintBottom_toBottomOf="@+id/bt_rewind" android:focusable="true"/>
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:clickable="true"
+      app:srcCompat="@drawable/skip_red_24dp"
+      android:id="@+id/bt_un_like"
+      app:backgroundTint="@android:color/white"
+      app:fabSize="auto"
+      app:rippleColor="#226FE2B3"
+      app:layout_constraintTop_toTopOf="@+id/bt_rewind"
+      app:layout_constraintBottom_toBottomOf="@+id/bt_rewind"
+      app:layout_constraintEnd_toStartOf="@+id/bt_rewind" android:layout_marginEnd="32dp"
+      android:focusable="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
